fixed overflow scroll on firefox below 2000px

--- a/src/shell/components/global-actions/styles.less
+++ b/src/shell/components/global-actions/styles.less
@@ -2,7 +2,7 @@
 .GlobalSubMenu {
   background-color: @globalMenuBkgColor;
   margin: 0;
-  padding: 16px 0;
+  padding: 12px 0;
   width: 100%;
   border-top: 1px solid lighten(@globalMenuBkgColor, 5%);
 
